content/docs/tutorials/acme/example/hello-ingress-prod-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"     #ClusterIssuer for production environment
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - example.example.com
    secretName: prod-www-tls # TLS secret for production
  rules:
  - host: example.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-app
            port:
              number: 80
